// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`joined inheritance findOne via child repo finds a Cat with all fields from both root and child tables 1`] = `
{
  "id": Any<String>,
  "isIndoor": false,
  "kind": "cat",
  "name": "Luna",
}
`;

exports[`joined inheritance findOne via child repo finds a Dog with all fields from both root and child tables 1`] = `
{
  "breed": "Beagle",
  "id": Any<String>,
  "kind": "dog",
  "name": "Buddy",
}
`;

exports[`joined inheritance insert populates both root and child tables inserting a Dog writes a row to both the Animal root table and the Dog child table 1`] = `
{
  "breed": "Labrador",
  "id": Any<String>,
  "kind": "dog",
  "name": "Rex",
}
`;

exports[`single-table inheritance findOne by subtype repo finds an inserted Car by ID through the Car repo 1`] = `
{
  "id": Any<String>,
  "make": "Honda",
  "seatCount": 4,
  "type": "car",
}
`;

exports[`single-table inheritance findOne by subtype repo finds an inserted Truck by ID through the Truck repo 1`] = `
{
  "id": Any<String>,
  "make": "Volvo",
  "payloadCapacity": 10,
  "type": "truck",
}
`;

exports[`single-table inheritance insert and retrieve by subtype repo inserts a Car and retrieves it via the Car repo 1`] = `
{
  "id": Any<String>,
  "make": "Toyota",
  "seatCount": 5,
  "type": "car",
}
`;

exports[`single-table inheritance insert and retrieve by subtype repo inserts a Truck and retrieves it via the Truck repo 1`] = `
{
  "id": Any<String>,
  "make": "Ford",
  "payloadCapacity": 2.5,
  "type": "truck",
}
`;

exports[`single-table inheritance polymorphic query via root repo finds both Cars and Trucks when querying via the Vehicle repo 1`] = `
[
  "InhCar",
  "InhTruck",
]
`;

exports[`single-table inheritance update updating a Car preserves the discriminator and updates the correct fields 1`] = `
{
  "id": Any<String>,
  "make": "Alfa Romeo",
  "seatCount": 2,
  "type": "car",
}
`;
